# OpenSLT

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  start-web.cmd  start-web.ps1  start-web.sh
backend/: portable_main.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/adapters/: __init__.py  database.py  ssh.py
backend/app/api/: deps.py  router.py
backend/app/core/: types.py  (+5 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth_rbac.py  test_database_bootstrap.py  test_database_resources.py  test_database_types.py  test_order_configs.py  test_parser_workflow.py  test_portable.py  test_resource_terminal.py  test_scenario_resources.py  test_slnic_workflow.py  test_workflow.py  test_workflow_builder.py  test_workflow_migration.py
deploy/desktop/: OpenSLT-Desktop.spec  README-DESKTOP.txt  build-desktop.ps1
deploy/nginx/: openslt.conf
deploy/portable/: OpenSLT.spec  README-PORTABLE.txt  build-portable.ps1  requirements.txt
deploy/scripts/: install.sh
deploy/systemd/: openslt-api.service  openslt-beat.service  openslt-worker.service
desktop/: __init__.py  api_client.py  main.py  models.py  pages.py  runtime.py  widgets.py  workers.py
desktop/tests/: test_api_client.py  test_pages.py  test_runtime.py
docs/: product_requirements_document.md  product_requirements_document_v2.md  rem_speed_test_workflow.md  scene_config.md  speedtest_workflow_v2.0.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: main.ts  styles.css
(+34 files in other folders)
