[project]
name = "openslt"
version = "0.1.0"
description = "OpenSLT REM futures automated latency testing platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "pymysql>=1.1,<2",
  "sqlglot>=26,<29",
  "redis>=5,<6",
  "celery>=5.4,<6",
  "structlog>=24.4,<26",
  "PyJWT>=2.9,<3",
  "cryptography>=43,<46",
  "python-multipart>=0.0.12,<1",
  "asyncssh>=2.17,<3",
  "pandas>=2.2,<3",
  "openpyxl>=3.1,<4",
  "jinja2>=3.1,<4",
  "weasyprint>=62,<67",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "httpx>=0.27,<1",
]
desktop = [
  "PySide6>=6.7,<7",
  "httpx>=0.27,<1",
  "pyinstaller>=6.10,<7",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
